# dds-rpc

./: pyproject.toml  test_dds_rpc.py
dds_rpc/: InterfaceFormer.py
omg/idl/: robot.c  robot.h  robot.idl  rpc_annotations.idl  rpc_types.c  rpc_types.h  rpc_types.idl
omg/omg-dds-rpc-cxx/: function_call.h  request_reply.h  sample.h
omg/omg-dds-rpc-java/src/org/omg/dds/core/: SampleIdentity.java
omg/omg-dds-rpc-java/src/org/omg/dds/rpc/: ClientEndpoint.java  ClientParams.java  Future.java  FutureCompletionListener.java  RPCEntity.java  RPCRuntime.java  Replier.java  ReplierListener.java  ReplierParams.java  ReplyHeader.java  RequestHeader.java  Requester.java  RequesterListener.java  RequesterParams.java  Sample.java  Server.java  ServerParams.java  ServiceEndpoint.java  ServiceParams.java  ServiceProxy.java  ServiceStatus.java  SimpleReplierListener.java  SimpleRequesterListener.java
tests/: test_dds_rpc.py
tests/idls/: robot.idl  robot_2.idl  rpc_types.idl
